# boilerplate-rs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  diesel.toml  docker-compose.yaml  lib.rs  notes.md  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.fleet/: settings.json
backend/: Cargo.toml
backend/src/: context.rs  extractors.rs  lib.rs  main.rs  openapi.rs  routes.rs  shared.rs  state.rs  tracing_provider.rs
backend/src/routes/: health.rs  mod.rs  routes.rs  users.rs
backend/src/routes/v1/: users.rs
backend/src/static/: openapi.html
backend/src/usecase/: users.rs
common/: Cargo.toml
common/src/config/: config.rs
config/: default.yaml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  log.rs
crates/common/src/models/db/: users.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  context.rs  database.rs  db.rs  env.rs  errors.rs  hash.rs  http.rs  lib.rs  openapi.rs  rdbms.rs  result.rs  signal.rs  tracing.rs
crates/infrastructure/src/http/: handler.rs  response.rs
crates/infrastructure/src/log/: drain.rsx  redirect.rs
crates/infrastructure/src/rdbms/: traits.rs
crates/infrastructure/src/tracing/: core_spans.rs  otel.rs  otel_spans.rs
crates/logger/: Cargo.toml
crates/logger/src/log/: mod.rs  mod.rsx  redirect.rs
etc/oci/postgres/: Dockerfile  init-user-db.sh
etc/oci/signoz/: clickhouse-config.xml  docker-compose.yaml  nginx-config.conf  otel-collector-config.yaml
migration/: Cargo.toml
migration/src/: prelude.rs  utils.rs
unused/: diesel.toml  tracing.rs
unused/config/: config.rs
