[workspace]
members = ["backend", "crates/common", "crates/infrastructure"]
exclude = [".cargo", "sontekan", "unused"]


[workspace.dependencies]
axum = "0.6.10"
sea-orm = "0.11.0"
lazy_static = { version = "1.4" }
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1.7.3"
tower-http = "0.4.0"
log = { version = "0.4" }
tracing = "0.1.35"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/widnyana/boilerplate-rs"
authors = ["Widnyana Putra <wid@widnyana.web.id>"]
homepage = "https://github.com/widnyana/boilerplate-rs"
keywords = ["axum", "rest", "api", "boilerplate"]


[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = "z"
panic = 'abort'
strip = "true"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
