[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Widnyana Putra <wid@widnyana.web.id>"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[dependencies]
common = { path = "../crates/common" }
logger = { path = "../crates/logger" }
infrastructure = { path = "../crates/infrastructure" }

axum = { workspace = true, features = ["headers"] }
dotenvy = "0.15.6"
hyper = "0.14.24"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "fs", "compression-gzip", "metrics", "tower", "trace", "add-extension", "auth", "base64", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "serde_json", "time"] }
lazy_static = "1.4.0"
slog-env-cfg = "0.6.0"
slog = { version = "2.7.0", features = ["nested-values"] }
slog-term = "2.9.0"
slog-json = "2.6.1"
thiserror = "1.0.39"
reqwest = "0.11.14"
axum-server = "0.4.6"
tracing-log = "0.1.3"
tower = { version = "0.4.13", features = ["tracing"] }
axum-extra = "0.7.0"
once_cell = "1.17.1"
serde = { version = "1.0.154", features = ["derive"] }
sea-orm = { version = "0.11.0", features = ["macros", "mock", "runtime-tokio-rustls", "sqlx-postgres", "chrono", "with-json", "postgres-array", "sqlx"] }
sqlx = { version = "0.6.2", features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid", "time"] }
anyhow = "1.0.69"
serde_json = "1.0.94"
