[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Widnyana Putra <wid@widnyana.web.id>"]

[lib]
name = "backend"
path = "./src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
### Local
infrastructure = { path = "../crates/infrastructure" }

### HTTP
axum = { workspace = true}
hyper = "0.14.24"
tokio = { workspace = true }
tower-http = {workspace = true}

### Tracing
tracing = { workspace = true, features = ["release_max_level_info",
	"log-always",
	"async-await",
	"valuable",
] }
tracing-subscriber = { workspace = true }

### database
sqlx = { workspace = true }
sea-orm = { workspace = true, features = ["macros",
	"mock",
	"runtime-tokio-rustls",
	"sqlx-postgres",
	"chrono",
	"with-json",
	"postgres-array",
	"sqlx",
] }


### Serialization
serde = { workspace = true, features = ["derive"] }

### Utils
aide = { workspace = true }
anyhow = "1.0.69"
