[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Widnyana Putra <wid@widnyana.web.id>"]

[dependencies]
infrastructure = { path = "../infrastructure" }
tokio = { workspace = true, features = ["parking_lot"] }
sea-orm = { workspace = true, default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "with-chrono",
] }
tracing.workspace = true
serde.workspace = true
lazy_static.workspace = true
regex.workspace = true
hex = "0.4.3"
base64 = "0.21.0"
url = "2.3.1"
