[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
figment = { version = "0.10.8", features = ["json", "env", "yaml"] }
once_cell = "1.17.1"
sea-orm = { workspace = true, features = ["macros", "mock", "runtime-tokio-rustls", "sqlx-postgres", "chrono", "with-json", "postgres-array", "sqlx"] }
serde = { version = "1.0.154", features = ["derive"] }
thiserror = "1.0.39"
tracing.workspace = true


[lib]
path = "src/lib.rs"
